--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+@import "~bootstrap/scss/bootstrap";
+
+body {
+    padding-top: 56px; // Adjust if you use a fixed navbar
+}
 $color: steelblue;
 
 .my-flix {
